--- a/css-script files/styles.css
+++ b/css-script files/styles.css
@@ -1,15 +1,21 @@
+body {
+    background: url(/images/background.jpeg) !important;
+    background-repeat: repeat;
+    background-position:right;
+    background-size:100% 100%;
+    backdrop-filter: blur(.4rem);
+}
+main {
+    background: rgba(250, 235, 215, 0.5);
+    height: 100vh;
+    overflow-y: auto;
+    padding:0 0 2rem 0;
+}
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-body {
-    background-image: url(/images/background.jpeg) !important;
-    background-repeat: repeat;
-    background-position:right;
-    background-size:100% 100%;
-    backdrop-filter: blur(.4rem);
 }
 h2,h1,p {
     text-align: center;
@@ -31,12 +37,6 @@ button:hover,.emojiButton:hover {
 header {
     text-align: center;
     padding:1rem 0;
-}
-main {
-    background-color: rgba(250, 235, 215, 0.5);
-    height: 100vh;
-    overflow-y: auto;
-    padding:0 0 2rem 0;
 }
 .fa {
     font-size: 2rem;
