--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body {
-    background: url(/images/background.jpeg) !important;
+    background-image: url(images/background.jpeg) !important;
     background-repeat: repeat;
     background-position:right;
     background-size:100% 100%;
     backdrop-filter: blur(.4rem);
 }
 main {
-    background: rgba(250, 235, 215, 0.5);
+    background-color: rgba(250, 235, 215, 0.5);
     height: 100vh;
     overflow-y: auto;
     padding:0 0 2rem 0;
