--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,49 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 body {
-    background-image: url(images/background.jpeg) !important;
+    background-image: url(images/background.jpeg);
     background-repeat: repeat;
     background-position:right;
     background-size:100% 100%;
     backdrop-filter: blur(.4rem);
+}
+.darkMode {
+    background-image: unset;
+    color: aliceblue;
+    main {
+    background-color: rgba(0, 0, 0, 0.799) !important;    
+    }
+    .menuContent {
+        color: black;
+        background-color: rgb(84, 84, 84);
+        h2 {
+            color: aliceblue;
+        }
+    }
+    .fa:hover {
+        color:antiquewhite;
+    }
+    .taskList {
+        color: black;
+    }
+    .tasks {
+        h2::before {
+            background-color: aliceblue;
+        }
+    }
+    button,.emojiButton,#button-mode {
+        background-color:rgb(138, 119, 82);
+    }
 }
 main {
     background-color: rgba(250, 235, 215, 0.5);
     height: 100vh;
     overflow-y: auto;
     padding:0 0 2rem 0;
-}
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 h2,h1,p {
     text-align: center;
@@ -49,6 +77,14 @@ header {
 .fa:hover {
     color: gray;
     cursor: pointer;
+}
+#button-mode {
+    position: absolute;
+    top:2%;
+    right:2%;
+    padding:.5rem 1rem;
+    font-weight: bold;
+    background-color: antiquewhite;
 }
 .lineThrough {
     text-decoration: line-through;
@@ -192,6 +228,11 @@ section.tasks {
         transform: translateX(-100%);
         visibility: hidden;
     }
+    #button-mode {
+        position: relative;
+        right:-50%;
+        transform: translateX(-50%);
+    }
 }
 @media (width < 768px) {
     html {
@@ -230,5 +271,12 @@ section.tasks {
 @media (width<375px) {
     .emojiButton {
         padding: .5rem .2rem!important;
+    }   
+}
+@media (width<480px) {
+    #button-mode {
+        position: relative;
+        right:-50%;
+        transform: translateX(-50%);
     }
 }
