--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ section.tasks {
     width: 80%;
     height:50%;
     transform: translateX(-50%) translateY(-50%);
-    background-color: red;
+    background-color: orangered;
     padding: 1rem;
     font-weight: bold;
     display: flex;
